[tool.poetry]
name = "project1-lysenko-egor-m25-555"
version = "0.1.0"
description = "Текстовая приключенческая игра 'Лабиринт сокровищ'"
authors = ["Egor Lysenko <egorlysenko4857@gmail.com>"]
readme = "README.md"

packages = [
    { include = "labyrinth_game" }
]

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv",".venv","dist","__pycache__"]

[tool.ruff.lint]
select = ["E","F","I"]
ignore = []

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.8,<0.15.0"
